--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/jorgerodriguez860/cantina#readme",
   "dependencies": {
     "axios": "^1.0.0",
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "pg": "^8.8.0",
