--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:up": "npx sequelize db:migrate && npx sequelize db:seed:all",
     "db:down": "npx sequelize db:seed:undo:all && npx sequelize db:migrate:undo:all",
